# fastzdp_api

./: .gitignore  README.md  pyproject.toml
examples/c01_teach_20240828/c01_hello/: server.py
examples/c01_teach_20240828/c02_99table/: print_99table.py  server.py
examples/c01_teach_20240828/c03_add/: server.py
examples/c01_teach_20240828/c04_power/: server.py
examples/c01_teach_20240828/c05_add2/: server.py
examples/c01_teach_20240828/c06_json/: server.py
examples/c01_teach_20240828/c07_json_add/: server.py
examples/c01_teach_20240828/c08_json_min_max/: server.py
examples/c01_teach_20240828/c09_avg/: server.py
examples/c02_course_manager_20240919/: c01_classes_add.py  c02_classes_get_page.py  c03_classes_update.py  c04_classes_delete.py  c05_classes_delete.py  main.py
examples/c02_course_manager_20240919/routers/: __init__.py  classes.py  course.py  course_video.py
fastzdp_api/: __init__.py  api.py  crud_router.py  middleware_cors.py
