[tool.poetry]
name = "fastzdp-api"
version = "0.1.5"
description = ""
authors = ["张大鹏 <1156956636@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
fastzdp-sqlmodel = "^0.1.4"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"